# rag-router-service

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
.gitea/workflows/: ci.yml
app/: config.py  exceptions.py  main.py
app/models/: query.py  upload.py
app/routes/: health.py  query.py  upload.py
app/services/: faiss_client.py  file_security_client.py  lightrag_client.py  parser.py  security_client.py
tests/: test_faiss_client.py  test_file_security_client.py  test_health.py  test_lightrag_client.py  test_parser.py  test_query.py  test_upload.py
